--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -1,4 +1,66 @@
 {% extends "portfolio/base.html" %}
+  
+{% load static %}
+
+{% block content %}
+<div id="allblogscontainer" data-aos="fade-up" data-aos-delay="100">
+
+  <div class="container">
+    <a href="{% url 'blog:all_blogs' %}" class="goback d-flex align-items-left justify-content-left"><i class="bi bi-arrow-left"></i> Go Back</a>
+
+    <h1 class="text-center mt-5" id="blogdetailtitle">{{ blog.title }}</h1>
+    <h5 class="text-center mt-5" style="color:#007bff"><i class="bi bi-building"></i> {{ blog.companyname }}</h5>
+    <h6 class="text-center mb-5"><i class="bi bi-geo-alt-fill"></i> {{ blog.worklocation }}</h6>
+
+    {% if blog.enddate is not none %}
+    <h5 class="text-center text-muted mb-5"> {{ blog.startdate|date:'M Y' }} - {{ blog.enddate|date:'M Y' }}</h5>
+    {% else %}
+    <h5 class="text-center text-muted mb-5">{{ blog.startdate|date:'M Y' }} - Present </h5>
+    {% endif %}
+
+    <p><strong>About {{ blog.companyname }}:</strong></p>
+    <p style="color:#6c757d">{{ blog.companydescription }}</p>
+    <br>
+    <center>
+      <hr>
+    </center>
+    
+    <p class="experience_detail">
+      {{ blog.jobdescription|safe }}
+    </p>
+
+  </div>
+</div>
+{% endblock %}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+{% comment %} {% extends "portfolio/base.html" %}
 
 {% load static %}
 
@@ -12,4 +74,4 @@
     {{ blog.description|safe }}
   </p>
 </div>
-{% endblock %}
+{% endblock %} {% endcomment %}
