--- a/experience/templates/experience/experience_detail.html
+++ b/experience/templates/experience/experience_detail.html
@@ -5,29 +5,26 @@
 {% block content %}
 <div id="allblogscontainer" data-aos="fade-up" data-aos-delay="100">
 
-  <div class="container">
+  <div class="container resume-title">
     <a href="{% url 'experience:all_experience' %}" class="goback d-flex align-items-left justify-content-left"><i class="bi bi-arrow-left"></i> Go Back</a>
 
     <h1 class="text-center mt-5" id="blogdetailtitle">{{ experience.title }}</h1>
-    <h5 class="text-center mt-5" style="color:#007bff"><i class="bi bi-building"></i> {{ experience.companyname }}</h5>
-    <h6 class="text-center mb-5"><i class="bi bi-geo-alt-fill"></i> {{ experience.worklocation }}</h6>
-
-    {% if experience.enddate is not none %}
-    <h5 class="text-center text-muted mb-5"> {{ experience.startdate|date:'M Y' }} - {{ experience.enddate|date:'M Y' }}</h5>
-    {% else %}
-    <h5 class="text-center text-muted mb-5">{{ experience.startdate|date:'M Y' }} - Present </h5>
-    {% endif %}
-
-    <p><strong>About {{ experience.companyname }}:</strong></p>
-    <p style="color:#6c757d">{{ experience.companydescription }}</p>
+    <div class="social-links text-left mt-5">
+      <a href="{{ e.code }}" class=""><i style="font-size: 20px;" class="bx bxl-github">Code</i></a><br>
+      <a href="{{ e.demo }}" class=""><i style="font-size: 20px;" class="bx bxl-telegram">Demo</i></a>
+    </div>
     <br>
+
+    <p style="font-size: 20px; display: inline;" class="text-left text-muted mb-5"><b>Backend: </b>{{ experience.backend }}&nbsp;&nbsp;|&nbsp;&nbsp;</p>
+    <p style="font-size: 20px; display: inline;" class="text-left text-muted mb-5"><b>Frontend: </b>{{ experience.frontend }}</p>
+    <br><br>
+    <p><strong style="font-size: 20px;">Description: </strong></p>    
     <center>
       <hr>
     </center>
-    <p class="experience_detail">
-      {{ experience.jobdescription|safe }}
-    </p>
 
+    <p style="font-size: 20px; color:#6c757d">{{ experience.description }}</p>
+  
   </div>
 </div>
 {% endblock %}
