--- a/experience/templates/experience/exptemplate.html
+++ b/experience/templates/experience/exptemplate.html
@@ -4,60 +4,42 @@
 }
 
 #blueul li::before {
-  content: "\2022";
-  color: #007bff;
-  font-weight: bold;
-  display: inline-block;
-  width: 1em;
-  margin-left: -1em;
+   content: "\2022";
+   color: #007bff;
+   font-weight: bold;
+   display: inline-block;
+   width: 1em;
+   margin-left: -1em;
 }
 </style>
 <center><h4 class="text-center mt-5" style="color:#007bff">Roles and Responsibilities</h4></center>
-
+<br>
 <ul id='blueul'>
-<li>Developed and implemented Sofftware Release Management strategies for various applications according to the agile process.</li>
-<li>Extensively involved in Managing Linux, and Windows virtual servers on AWS EC2 instance
-</li><li>Provide highly durable and available data by using S3 data store, versioning, lifecycle policies, and create AMIs for mission-
-   critical production servers for backup, and RDS, Route 53, VPC, RDS, DynamoDB, SES, SQS, and SNS services in AWS cloud
-</li><li>Worked on building a data center with AWS. Built Pre-prod environments AWS services like EC2, S3, VPC, EBS, ELB, Auto-
-   Scaling, Cloud Watch, Cloud Trail, IAM, SNS, SQS, RDS, DynamoDB, Cloud front, etc.
-</li><li>Managed servers on the Amazon Web Services (AWS) platform instances using Puppet, Chef Configuration Management.
-</li><li>Used AWS Beanstalk for deploying and scaling web applications and services developed with Java, Node.ps, Python on
-   servers like Apache, Nginx, Tomcat.
-</li><li>Created, maintained, and handled different operations like maintaining and troubleshooting EC2 instances, S3, VPC, and ELB.
-</li><li>Build, manage, and continuously improve the build infrastructure for the software development engineering teams, including
-   implementing build scripts, continuous integration infrastructure, and deployment tools.
-</li><li>Expertise in writing new plugins to support new functionality in Terraform.
-</li><li>Worked on administration, maintenance, and support of Red Hat Enterprise Linux servers.
-</li><li>Experience in writing Ansible scripts and heavy Shell, Perl, Python, and JSON scripting
-</li><li>Hands-on experience in container-based deployments using Docker, working with Docker images, automated builds using
-   Docker Hub and Docker registries, Kubernetes, Docker.
-</li><li>Worked on installing Docker using Docker toolbox; created Docker containers and Docker consoles for application life cycle.
-</li><li>Worked on Docker container snapshots, attaching to a running container, removing images, managing directory structures,
-   and managing containers.
-</li><li>Using Jenkins AWS CodeDeploy plugin to deploy to AWS.
-</li><li>Used Jenkins for automating Builds and Automating Deployments.
-</li><li>Worked on developing CI/CD system with Jenkins on Kubernetes environment, Utilized Kubernetes and Docker for the
-   runtime environment to build, test, and deploy, and troubleshot pods through SSH and logs, wrote and modified Buildconfigs,
-   templates, Imagestreams, etc.
-</li><li>Create, maintain, and administrating GitHub and Subversion repositories as source code management.
-</li><li>Integrated GIT into Jenkins to automate the code check-out process.
-</li><li>Create a Jenkins job to build the artifacts using Maven, deploy the Terraform templates to create the stack.
-</li><li>Built CloudFormation and Terraform template using JSON and Python scripting for cloud infrastructure.
-</li><li>Refined automation components with scripting and configuration management (Ansible).
-</li><li>Designed Ansible playbooks using YAML to Provision several pre-mode environments.
-</li><li>Extensively used Maven and Ant for building applications.
-</li><li>Developed build and deployment scripts using Maven as the build tool, and integrated Selenium in Jenkins, to perform the
-   automated integration test.
-</li><li>Designed Ant and Maven scripts to automate the build process for Java projects in building artifacts for the source code.
-</li><li>Set up /maintained Logging and Monitoring subsystems using Elasticsearch, Fluentd, Kibana, Prometheus, Grafana, and
-   Alertmanager.
-</li><li>Established infrastructure and service monitoring using Prometheus and Grafana.
-</li><li>Configured monitoring of AWS Instances regularly using ops view and New Relic tools. Also, used New Relic for monitoring.
-</li><li>Created scripts in Python, which integrated with Amazon API to control instance operations.
-</li><strong>ENVIRONMENT:</strong> AWS, Terraform, Ansible, Docker, Kubernetes, Jenkins, Git, Ant, Maven, Nexus, EFK, Grafana, Powershell, New
-		  Relic, Python, Prometheus
+   <li>Responsible for gathering requirements, system analysis, design, development, testing and deployment.</li>
 
+   <li>Build a product details page with price, description, model and other details for users in a car rental company project.</li>
 
+   <li>Involved in Business logic implementation, data exchange, XML processing and web page using Python and Django.</li>
+
+   <li>Experience with MVC architecture using Django for web-based application in OOP concepts.</li>
+
+   <li>Used web applications development using Django/Python, Flask/python, jQuery while using HTML5/CSS3 for server-side rendered application.</li>
+
+   <li>Worked with APIs to surface curated recommendations to users and an admin panel to manage curator recommendations.</li>
+
+   <li>Improved conversions by improving website load times, implementing new features, optimizing backend infrastructure and client performance.</li>
+
+   <li>Build, manage, and continuously improve the build infrastructure for the software development engineering teams, including
+      implementing build scripts, continuous integration infrastructure, and deployment tools.</li>
+
+   <li>Utilized Python packages like NumPy, Matplotlib, SciPy, and Pandas for data analysis, visualization and business logic implementation.</li>
+
+   <li>Used Pandas library for statistics Analysis.</li>
+
+   <li>Identified and resolved bugs and issues that were escalated to engineers.</li>
+
+   <li>Developed SQL Queries, Stored Procedures, and Triggers Using Oracle, SQL and PL/SQL.</li>
+
+   <li><strong>ENVIRONMENT:</strong> Python, Django, Flask, SQL, Web Development</li>
 
 </ul>
