--- a/portfolio/static/portfolio/assets/css/style.css
+++ b/portfolio/static/portfolio/assets/css/style.css
@@ -25,7 +25,7 @@ li{
   padding-top: 5px;
 }
 #topNav li{
-  padding-right: : 30px;
+  padding-right: 30px;
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: "Raleway", sans-serif;
