--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -23,9 +23,9 @@
 
 <section id="hero" class="d-flex flex-column justify-content-center">
   <div class="container" data-aos="zoom-in" data-aos-delay="100">
-    <h1>Gopal L Godhani</h1>
+    <h1>Dinesh A Godhani</h1>
 
-    <p>I'm <span class="typed" data-typed-items="DevOps Consultant,  Freelancer, Developer, Animal Lover"></span></p>
+    <p>I'm <span class="typed" data-typed-items="Python Developer,  Freelancer, Computer Engineer, Swimmer"></span></p>
     <br>
 
     <form action="{% static "portfolio/resume.pdf" %}">
@@ -46,32 +46,32 @@
 
       <div class="section-title">
         <h2>About</h2>
-        <p>Around eight years of experience comprising Linux Administrator and Software Configurations management with Expertise in the areas of Build and Release management, taking care of CI/CD pipeline, cloud solutions, and containerization.</p>
+        <p>Experienced Python developer with one year of dedicated practice, specializing in Django framework, and also been part of real-time web application in my academic career.</p>
       </div>
 
       <div class="row">
         <div class="col-lg-4">
-          <img src="{% static 'portfolio/assets/img/gg.jpg' %}" class="img-fluid" alt="">
+          <img src="{% static 'portfolio/assets/img/dg.jpg' %}" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content">
-          <h3> DevOps Engineer</h3>
-          <p class="fst-italic">
-            Expertise in Cloud Automation, DevOps, SRE, and System Administrator
-          </p>
+          <h3> Software Engineer</h3>
+          {% comment %} <p class="fst-italic">
+            Expertise in Python, Django, SQL and Flask.
+          </p> {% endcomment %}
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>21 September 1996</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.devoperations.engineer</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+1-812-370-0840</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New Jersey, USA</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>May 05 2002</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="https://www.linkedin.com/in/dinesh-godhani-59436325b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" class="">Linkedin</a></span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+1(312)358-1984</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Chicago, IL, USA</span></li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>25</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master's</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>contact@devoperations.engineer</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>22</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master of Computer Science</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong><a href="mailto:mr.godhani05@gmail.com"> <span>mr.godhani05@gmail.com</span></a></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
               </ul>
             </div>
@@ -99,21 +99,21 @@
         <div class="col-lg-6">
 
           <div class="progress">
-            <span class="skill">AWS <i class="val">90%</i></span>
+            <span class="skill">SQL <i class="val">90%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">Docker <i class="val">95%</i></span>
+            <span class="skill">Python <i class="val">95%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">Jenkins <i class="val">90%</i></span>
+            <span class="skill">Django <i class="val">90%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -124,7 +124,7 @@
         <div class="col-lg-6">
 
           <div class="progress">
-            <span class="skill">Kubernetes <i class="val">80%</i></span>
+            <span class="skill">Flask <i class="val">80%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -138,17 +138,17 @@
           </div>
 
           <div class="progress">
-            <span class="skill">Azure <i class="val">70%</i></span>
+            <span class="skill">Web Development <i class="val">90%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
         </div>
         <div class="">
           <br><br>
-          <strong>Other Tools: </strong> TerraForm, Ansible, Nexus, Bamboo, Chef, Nagios, Splunk, Puppet, Maven, Ant, Gradle, Bitbucket, GitLab, Slack, Prometheus, Selenium, ServiceNow, Jira,
-
+          <strong>Python Library: </strong> Pandas, matplotlib, numpy, re, tkinter, turtle, flask, selenium, smtplib, BeautifulSoup, SQLAlchemy, random, os, seaborn, plotly, twilio, datetime, math, time, crispy_forms, taggit, import_export, jazzmin, csv, Bootstrap.
+          <br><br><strong>Hobbies: </strong> Swimming🏊, Gymming🏋️, Music🎵, Travel🛫, Foodie🍽️
         </div>
       </div>
 
@@ -164,92 +164,60 @@
 
       <div class="section-title">
         <h2>Resume</h2>
-        <p>As a DevOps Engineer, I'm always up to learn more about the best and latest industry developments in the field. It is my intent to narrow my interest and deepen my knowledge in Enterprise Operations and gain global exposure.</p>
+        {% comment %} <p>As a Python Developer, I'm always eager to learn about the latest industry trends. I'm now aiming to specialize in Enterprise Operations and broaden my horizons internationally.</p> {% endcomment %}
       </div>
 
       <div class="row">
 
-        <h3 class="resume-title">Sumary</h3>
+        <h3 class="resume-title">Introduction</h3>
         <div class="resume-item pb-0">
-          <h4>Gopal Godhani</h4>
-          <p><em>Focused on developing solutions to increase velocity, quality to build reliable software products. Extensive experience with Amazon Web Services, Docker, Kubernetes, Jenkins, and helping clients to use DevOps for the modern age.</em>
+          <h4>Dinesh A Godhani</h4>
+          <p><em>Analytical, motivated and hard-working Python Developer with over one year of experience designing, debugging and troubleshooting applications using Django and Python coding languages. Always eager to expand my skill set and conquer new challenges. My disciplined approach to daily routines reflects my commitment to personal and professional growth.</em>
           </p>
-          <ul>
-            <li>Elizabeth Street, South Bound Brook, NJ, USA</li>
-            <li>(812) 370-0840</li>
-            <li>contact@devoperations.engineer</li>
-          </ul>
+          <br>
         </div>
 
         <h3 class="resume-title">Education</h3>
-        <div class="resume-item">
-          <h4>Master of Computer & Information Science</h4>
-          <h5>2019 - 2021</h5>
-          <p><em>Cleveland State University</em></p>
-          <p>Learned the development of IS infrastructure to support the organization’s processes with a focus on Cloud Computing, Emerging Technologies, Advanced Network Security, System Thinking and Project Management along with best practices.
-          </p>
-        </div>
-        <div class="resume-item">
-          <h4>Bachelor of Computer Science</h4>
-          <h5>2015 - 2019</h5>
-          <p><em>Cleveland State University, Cleveland, OH</em></p>
-          <p>Learned practical and theoretical capabilities of computing, including problem solving and algorithms with programming, database development, networks, security, and system administration at the center.</p>
-        </div>
-
+        {% for edu in education %}
+          <div class="resume-item">
+            <h4>{{ edu.degree }}</h4>
+            <h5>{{ edu.startdate|date:"M, Y" }} - {{ edu.enddate|date:"M, Y" }}</h5>
+            <p><b>{{ edu.university }}</b></p>
+            <p> <b>Relevant Courses:</b> {{ edu.description }}</p>
+          </div>
+        {% endfor %}
 
         <h3 class="resume-title">Professional Experience</h3>
-        <div class="resume-item">
-          <h4>Cloud Automation / DevOps Engineer</h4>
-          <h5>Feb 2021 - Present</h5>
-          <p><em>Sherwin-Williams, Cleveland, OH</em></p>
+        {% for b in blog %}
+          <div class="resume-item">
+            <h4>{{ b.companyname }} / {{ b.position}}</h4>
+            <h5>{{ b.startdate|date:"M, Y" }} - {{ b.enddate|date:"M, Y" }}</h5>
+            <p><em>{{ b.location}}</em></p> 
+            <ul>
+              <p class="experience_detail"><b>Job Description: </b><em>Responsible for gathering requirements, system analysis, design, development, testing and deployment...</em></p>
+              <a href="{% url 'blog:detail' b.id %}">Read More <i class="bi bi-book-half"></i> </a>
+            </ul>
+          </div>
+        {% endfor %}
 
-          <ul>
-            <li>Involved in designing and deploying a multitude of applications utilizing almost all the AWS stack</li>
-            <a href="{% url 'experience:all_experience' %}">Read More <i class="bi bi-book-half"></i> </a>
-          </ul>
-        </div>
-        <div class="resume-item">
-          <h4>DevOps / SRE Engineer</h4>
-          <h5>Aug 2019 - Jan 2021</h5>
-          <p><em>Humana Inc., Louisville, KY</em></p>
-          <ul>
-            <li>Developed and implemented Sofftware Release Management strategies for various applications according to the agile process.</li>
-            <a href="{% url 'experience:all_experience' %}">Read More <i class="bi bi-book-half"></i> </a>
-          </ul>
-        </div>
-        <div class="resume-item">
-          <h4>Build and Release Engineer</h4>
-          <h5>Jan 2017 - Jul 2019</h5>
-          <p><em>CUNA Mutual Group, Madison, WI </em></p>
-          <ul>
-            <li>Creation of Build and Release Plan, collection, analysis & presentation of Project Metrics weekly.</li>
-            <li> Developed and supported the Software Release Management and procedures</li>
-            <a href="{% url 'experience:all_experience' %}">Read More <i class="bi bi-book-half"></i> </a>
-          </ul>
-        </div>
-        <div class="resume-item">
-          <h4>System Engineer</h4>
-          <h5>Mar 2016 - Dec 2016</h5>
-          <p><em>Cleveland Clinic, Cleveland, OH </em></p>
-          <ul>
-            <li>Design and manage composite systems over their life cycles.</li>
-            <li>Monitoring and managing all installed systems and infrastructure</li>
-            <a href="{% url 'experience:all_experience' %}">Read More <i class="bi bi-book-half"></i> </a>
-          </ul>
-        </div>
-        <div class="resume-item">
-          <h4>Linux Administrator</h4>
-          <h5>Apr 2014 - Feb 2016</h5>
-          <p><em>Cleveland Clinic, Cleveland, OH </em></p>
-          <ul>
-            <li>Proactively maintain and develop all Linux infrastructure technology to maintain a 24x7 uptime service</li>
-
-            <a href="{% url 'experience:all_experience' %}">Read More <i class="bi bi-book-half"></i> </a>
-          </ul>
-        </div>
+        <h3 class="resume-title">Academic Projects</h3>
+        {% for e in experience %}
+          <div class="resume-item">
+            <h4>{{ e.title }}</h4>
+            <p><em>{{ e.description|truncatechars:320 }}</em></p>
+            <a href="{% url 'experience:experience_detail' e.id %}">Read More <i class="bi bi-book-half"></i></a><br>
+            <ul>
+              <li><b>Backend:</b> {{ e.backend }}</li>
+              <li><b>Frontend:</b> {{ e.frontend }}</li>
+            </ul>
+            <div class="social-links">
+              <a href="{{ e.code }}" class=""><i style="font-size: 20px;" class="bx bxl-github">Code</i></a>&nbsp;
+              <a href="{{ e.demo }}" class=""><i style="font-size: 20px;" class="bx bxl-telegram">Demo</i></a>
+            </div><br><br>
+          </div>
+        {% endfor %}
       </div>
     </div>
-
 
   </section>
 
@@ -266,33 +234,27 @@
 
         <div class=" mx-auto" style="width: 350px;">
 
-
-
           <div class="info">
-            <div class="address" center>
-              <i class="bi bi-geo-alt"></i>
+            <div class="address"><a href="https://maps.app.goo.gl/kwHwdd6ECxs15SkbA">
+              <i class="bi bi-geo-alt"></i></a>
               <h4>Location:</h4>
-              <p>South Bound Brook, NJ 08880</p>
+              <p>401 e 32nd st, Chicago, IL 60616</p>
             </div>
 
-            <div class="email">
-              <i class="bi bi-envelope"></i>
+            <div class="email"><a href="mailto:mr.godhani05@gmail.com">
+              <i class="bi bi-envelope"></i></a>
               <h4>Email:</h4>
-              <p>contact@devoperations.engineer </p>
+              <p>mr.godhani05@gmail.com</p>
             </div>
 
-            <div class="phone">
-              <i class="bi bi-phone"></i>
+            <div class="phone"><a href="tel:+13123581984">
+              <i class="bi bi-phone"></i></a>
               <h4>Call:</h4>
-              <p>+1 (812) 370 0840</p>
+              <p>+1 (312) 358 1984</p>
             </div>
-
-
 
           </div>
-
         </div>
-
       </div>
     </center>
   </section>
@@ -309,11 +271,11 @@
     <center>
       <hr>
     </center>
-    <h3>G. L. Godhani</h3>
+    <h3>D. A. Godhani</h3>
 
     <div class="social-links">
-      <a href="https://join.skype.com/invite/f5CyILSSrgr7" class="google-plus"><i class="bx bxl-skype"></i></a>
-      <a href="https://www.linkedin.com/in/gopal-g-61887421b/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+      <a href="https://meet.google.com/rkq-tiiw-gvx" class="google-plus"><i class="bx bxl-zoom"></i></a>
+      <a href="https://www.linkedin.com/in/dinesh-godhani-59436325b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" class="linkedin"><i class="bx bxl-linkedin"></i></a>
     </div>
   </div>
 </footer>
