--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -49,6 +49,10 @@
       </div>
     </div>
   </nav>
+  <div class="alert alert-warning alert-dismissible fade show text-center" role="alert">
+    <strong>Please Note That</strong> this website is intended solely for educational purposes.
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
   {% block content %} {% endblock %}
 
   <div id="preloader"></div>
