--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -23,6 +23,8 @@
     <br>
     <center>
       <hr>
+      <h4 class="text-center mt-5" style="color:#007bff">Roles and Responsibilities</h4>
+      <br>
     </center>
     
     <p class="experience_detail">
